--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -2,4 +2,13 @@
 
 @media screen and (min-width:500px) {
 
+selector {
+    background: lightblue;
+    }
+}
+
+
+/* screen sizes between 960px and 1200px */
+@media screen and (min-width:960px) and (max-width:1200px) {
+    /*...*/
 }
