--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,10 +1,16 @@
 /* screen sizes 500px and up */
 
-@media screen and (min-width:500px) {
-
-selector {
+body {
     background: lightblue;
-    }
+}
+
+@media screen and (max-width:500px) {
+
+.hidden-on-mobile {
+    image-resolution: 200px;
+}
+
+
 }
 
 
