--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -28,7 +28,7 @@ body {
     .nav-links {
         border-style: solid;
         border-width: 1px;
-        background-color: lightgray;
+        background-color: lightsalmon;
         padding-top: 10x;
         padding-right: 10px;
         padding-bottom: 10px;
